step3/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-frontend
  namespace: dev
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: demo-frontend
  template:
    metadata:
      labels:
        app: demo-frontend
    spec:
      serviceAccountName: app-service-account
      containers:
      - name: frontend
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html
      volumes: 
      - name: shared-data
        persistentVolumeClaim:
          claimName: data-azurefile
