step3/ingress.frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-frontend
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-frontend
            port:
              number: 80
